<resources>
    <string name="app_name">tasks_application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="add_list">Add list</string>
    <string name="_1">1</string>
    <string name="delete">Delete</string>
    <string name="desc">Desc</string>
    <string name="date">Date</string>
    <string name="add_task">Add task</string>
    <string name="favorite">Favorite</string>
    <string name="rename">rename</string>
    <string name="update">Update</string>
    <string name="add_subtask">add subtask</string>
</resources>